# netcli

./: .gitignore  main.py  pyproject.toml
net_cli/: main.py  pyproject.toml
net_cli/src/: cli.py
net_cli/src/helpers/: helper.py
net_cli/src/scrapers/: get_episode.py  get_movies.py  get_suggestion.py  search_movie.py
net_cli/src/utils/: constants.py
net_cli_server/: README.md  cli.py  history.json  main.py  pyproject.toml
net_cli_server/src/helpers/: cli_helper.py  helpers.py
net_cli_server/src/scraper/: get_episode.py  get_movies.py  search_movie.py
net_cli_server/src/utils/: constants.py  scheduler.py
net_ui-client/: Self.txt  package-lock.json  package.json  readme.md
net_ui-client/source/: cli.tsx
src/: __init__.py
src/scrapers/: soap_scraper.py
src/ui/: main_screen.py
src/ui/components/: input.py  loader.py
src/ui/styles/: style.css
src/utils/: __init__.py  contants.py  helpers.py  playwrite.py  print_result.py  scraper.py  soap_scraper.py
ui-client/: .gitignore  App.jsx  config.json  data.js  index.jsx  message.txt  package-lock.json  package.json  test.json
ui-client/components/: Header.jsx  Input.jsx  Loader.jsx  Movies.jsx  SelectEpisode.jsx  SelectLanguage.jsx  Shortcuts.jsx
ui-client/context/: useSession.jsx
ui-client/hooks/: useTerminalSize.js
