[project]
name = "app-prototype"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow>=12.1.1",
    "playwright>=1.58.0",
    "requests>=2.32.5",
    "rich>=14.3.2",
    "textual>=7.5.0",
    "textual-image>=0.8.5",
]
